# color_palette

./: CMakeLists.txt  README.md  package.xml
include/: boost_assert_helper.hpp  color_library.hh  color_palette.hh  color_picker.hh
palettes/: autumn.palette  bone.palette  colorcube.palette  cool.palette  copper.palette  flag.palette  generate_palettes.m  gray.palette  hot.palette  hsv.palette  jet.palette  lines.palette  parula.palette  pink.palette  prism.palette  spring.palette  summer.palette  winter.palette
scripts/: generate_palattes.m
src/: color_library.cc  color_palette.cc  color_picker.cc
test/: test_color_library.cc
