<?xml version="1.0"?>
<package>
  <name>color_utils</name>
  <version>0.1.0</version>
  <description>The color_palette package</description>

  <maintainer email="ozaslan@seas.upenn.edu">ozaslan</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ozaslan/color_utils</url>

  <author email="ozaslan@seas.upenn.edu">Tolga Ozaslan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  
  <run_depend>roslib</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>boost</run_depend>

  

</package>
